feat(system): show upgrade dialog for non admin (#8093)
* feat(system): show upgrade dialog for non admin

* feat(system): refactor feature flag

* chore(eslint): allow prop spreading for hocs

* feat(system): hide upgrade banner for extension

* feat(system): hide banner for non standalone

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -105,6 +105,11 @@ overrides:
       'no-await-in-loop': 'off'
       'react/jsx-no-useless-fragment': ['error', { allowExpressions: true }]
       'regex/invalid': ['error', [{ 'regex': '<Icon icon="(.*)"', 'message': 'Please directly import the `lucide-react` icon instead of using the string' }]]
+    overrides: # allow props spreading for hoc files
+      - files:
+          - app/**/with*.ts{,x}
+        rules:
+          'react/jsx-props-no-spreading': off
   - files:
       - app/**/*.test.*
     extends:
