--- a/package.json
+++ b/package.json
@@ -17,35 +17,32 @@
     }
   ],
   "scripts": {
-    "build": "grunt clean:all && grunt build",
-    "build:server": "grunt clean:server && grunt build:server",
-    "build:client": "grunt clean:client && grunt build:client",
-    "prebuild:docs": "go install github.com/swaggo/swag/cmd/swag@v1.7.1",
-    "build:docs": "cd api && swag init -g ./http/handler/handler.go --parseDependency --parseInternal --parseDepth 2 --markdownFiles ./",
-    "validate:docs": "swagger2openapi --warnOnly api/docs/swagger.yaml -o api/docs/openapi.yaml && swagger-cli validate api/docs/openapi.yaml",
-    "clean": "grunt clean:all",
-    "start": "grunt start",
-    "start:clean": "grunt clean:all && grunt start",
-    "start:localserver": "grunt start:localserver",
-    "start:server": "grunt clean:server && grunt start:server",
-    "start:client": "grunt clean:client && grunt start:client",
-    "dev:client": "grunt clean:client && webpack-dev-server --config=./webpack/webpack.develop.js",
-    "dev:client:prod": "grunt clean:client && webpack-dev-server --config=./webpack/webpack.production.js",
-    "dev:nodl": "grunt clean:server && grunt clean:client && grunt build:server && grunt start:client",
-    "dev:extension": "grunt build && make local -f build/docker-extension/Makefile",
-    "start:toolkit": "grunt start:toolkit",
-    "build:server:offline": "cd ./api/cmd/portainer && CGO_ENABLED=0 go build --installsuffix cgo --ldflags '-s' && mv -f portainer ../../../dist/portainer",
-    "clean:all": "grunt clean:all",
-    "format": "prettier --loglevel warn --write \"**/*.{js,css,html,jsx,tsx,ts,json}\"",
-    "lint": "yarn lint:client; yarn lint:server",
-    "lint:server": "cd api && golangci-lint run -E exportloopref",
+    "setup": "yarn download-binaries",
+    "dev:client": "webpack-dev-server --config=./webpack/webpack.develop.js",
+    "start:server": "",
+    "start:client": "yarn webpack -w --config=./webpack/webpack.develop.js",
+    "build": "yarn build:client & yarn build:server",
+    "build:client": "yarn webpack --config=./webpack/webpack.production.js",
+    "build:server": "",
+    "clean": "rm -rf dist",
+    "format": "yarn format:client & yarn format:server",
+    "format:client": "prettier --loglevel warn --write \"**/*.{js,css,html,jsx,tsx,ts,json}\"",
+    "format:server": "cd api && go fmt ./...",
+    "lint": "yarn lint:client & yarn lint:server",
     "lint:client": "eslint --cache --fix './**/*.{js,jsx,ts,tsx}'",
-    "lint:pr": "make lint-pr",
-    "test": "yarn test:client; yarn test:server",
+    "lint:server": "cd api && golangci-lint run -E exportloopref",
+    "test": "yarn test:client & yarn test:server",
     "test:server": "cd api && go test ./...",
     "test:client": "jest --silent",
+    "predocs:build": "go install github.com/swaggo/swag/cmd/swag@v1.7.1",
+    "docs:build": "cd api && swag init -g ./http/handler/handler.go --parseDependency --parseInternal --parseDepth 2 --markdownFiles ./",
+    "docs:validate": "swagger2openapi --warnOnly api/docs/swagger.yaml -o api/docs/openapi.yaml && swagger-cli validate api/docs/openapi.yaml",
+    "sb": "yarn storybook",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o ./dist/storybook",
+    "storybook:build": "build-storybook -o ./dist/storybook",
+    "download-binaries": "./build/download_binaries.sh",
+    "dev:extension": "grunt build && make local -f build/docker-extension/Makefile",
+    "start:toolkit": "grunt start:toolkit",
     "analyze-webpack": "webpack --config ./webpack/webpack.analyze.js"
   },
   "scriptsComments": {
