chore(build): clean tasks

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "scripts": {
     "setup": "yarn download-binaries",
     "dev:client": "webpack-dev-server --config=./webpack/webpack.develop.js",
-    "start:server": "",
+    "start": "yarn start:server && yarn start:client",
+    "start:server": "yarn build:server && ./dev/run_container.sh",
     "start:client": "yarn webpack -w --config=./webpack/webpack.develop.js",
     "build": "yarn build:client & yarn build:server",
-    "build:client": "yarn webpack --config=./webpack/webpack.production.js",
-    "build:server": "",
+    "build:client": "yarn webpack --config=./webpack/webpack.develop.js",
+    "build:server": "./build/build_binary.sh",
     "clean": "rm -rf dist",
     "format": "yarn format:client & yarn format:server",
     "format:client": "prettier --loglevel warn --write \"**/*.{js,css,html,jsx,tsx,ts,json}\"",
@@ -41,8 +42,8 @@
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook -o ./dist/storybook",
     "download-binaries": "./build/download_binaries.sh",
-    "dev:extension": "grunt build && make local -f build/docker-extension/Makefile",
-    "start:toolkit": "grunt start:toolkit",
+    "dev:extension": "yarn build && make local -f build/docker-extension/Makefile",
+    "start:toolkit": "yarn build:server && ./dist/portainer",
     "analyze-webpack": "webpack --config ./webpack/webpack.analyze.js"
   },
   "scriptsComments": {
@@ -213,8 +214,6 @@
     "grunt-replace": "^1.0.1",
     "grunt-shell-spawn": "^0.4.0",
     "grunt-usemin": "^3.1.1",
-    "grunt-webpack": "^5.0.0",
-    "gruntify-eslint": "^3.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.5.0",
     "husky": "4.2.5",
